--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
-
+	<script src="https://kit.fontawesome.com/a1540a5ac8.js" crossorigin="anonymous"></script>
 	<script defer src='/build/bundle.js'></script>
 </head>
 
