--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,8 +5,7 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Welcome to my portfolio!</title>
-
-	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel = "icon" href = "https://media-exp1.licdn.com/dms/image/C4D16AQEGFXiY1X33dA/profile-displaybackgroundimage-shrink_50_200/0/1627624373341?e=1659571200&v=beta&t=zEIN_EMOW8zClyoOTzCrxHr9PYY6ZLH4p5ASHWV7UsM" type = "image/x-icon">
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<script src="https://kit.fontawesome.com/a1540a5ac8.js" crossorigin="anonymous"></script>
